교육공간 속 환경설정 속 디스플레이 리사이클러뷰 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".settingedu.SettingDetailActivity"
@@ -46,6 +42,9 @@
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".settingedu.SettingDisplayActivity"
             android:exported="false" />
       <activity
             android:name="com.sungkyul.synergy.settingedu.SettingEduActivity"
