--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,15 @@
             android:exported="false" />
         <activity
             android:name=".IconEduActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".settingedu.IconDetailActivity"
+            android:exported="true" />
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" />
