--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,80 +15,88 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
+
         <activity
             android:name=".kakaotalk.ProfileDetailActivity"
             android:exported="false" />
+
         <activity
             android:name=".kakaotalk.ChattingActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
+            android:exported="false">
         </activity>
+
         <activity
             android:name=".settingedu.SettingDetailActivity"
             android:exported="false" />
+
         <activity
             android:name=".kakaotalk.KakaotalkLoginActivity"
             android:exported="false" />
+
         <activity
             android:name=".kakaotalk.KakaoMainActivity"
             android:exported="false" />
 
-        <!-- 화면구성 교육-->
+        <!-- 화면구성 교육 -->
         <activity
             android:name=".screenEdu.ScreenEduActivity"
             android:exported="false" />
-            <!--화면 구성: 1.메인 화면-->
+
+        <!-- 화면 구성: 1.메인 화면 -->
         <activity
             android:name=".screenEdu.ScreenEduMainActivity"
             android:exported="false" />
-        <!--화면 구성: 2.상단바-->
+
+        <!-- 화면 구성: 2.상단바 -->
         <activity
             android:name=".screenEdu.ScreenEduToolActivity"
             android:exported="false" />
-            <!--화면 구성: 3.하단바-->
+
+        <!-- 화면 구성: 3.하단바 -->
         <activity
             android:name=".screenEdu.ScreenEduBottomActivity"
             android:exported="false" />
 
-            <!-- 화면 구성: -->
+        <!-- 화면 구성: -->
         <activity
             android:name=".screenEdu.ScreenEdu_select_Activity"
             android:exported="false" />
-            <!-- 화면 구성: 상단바 교육 화면-->
+
+        <!-- 화면 구성: 상단바 교육 화면 -->
         <activity
             android:name=".screenEdu.ScreenEdu_ToolBar_Navigation_Activity"
             android:exported="false" />
-        <!--아이콘 교육-->
+
+        <!-- 아이콘 교육 -->
         <activity
             android:name=".IconEduActivity"
             android:exported="false" />
+
         <activity
             android:name=".IconEdu.IconDetailActivity"
-            android:exported="true" />
+            android:exported="false" />
 
         <activity
             android:name=".EduSpaceActivity"
             android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".settingedu.SettingDisplayActivity"
             android:exported="false" />
-      <activity
-            android:name="com.sungkyul.synergy.settingedu.SettingEduActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name="com.sungkyul.synergy.settingedu.SettingEduActivity"
+            android:exported="false">
         </activity>
     </application>
-
 </manifest>
