--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".kakaotalk.ProfileDetailActivity"
+            android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.ChattingActivity"
+            android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".edu_space.kakaotalk.activity.ChattingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,16 +33,16 @@
             android:name=".settingedu.SettingDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.KakaotalkLoginActivity"
+            android:name=".edu_space.kakaotalk.activity.KakaotalkLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.KakaoMainActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".ScreenEduActivity"
             android:exported="false" />
         <activity
-            android:name=".IconEduActivity"
+            android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
