[feat] 폴더 구조 정리 진행 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".defaultApp.PhoneActivity"
+            android:name=".edu_space.defaultapp.PhoneActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +24,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".kakaotalk.ProfileDetailActivity"
+            android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.ChattingActivity"
+            android:name=".edu_space.kakaotalk.activity.ChattingActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -36,10 +36,10 @@
             android:name=".settingedu.SettingDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.KakaotalkLoginActivity"
+            android:name=".edu_space.kakaotalk.activity.KakaotalkLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".kakaotalk.KakaoMainActivity"
+            android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
             android:exported="false">
         </activity> <!-- 화면구성 교육 -->
         <activity
@@ -61,10 +61,10 @@
             android:name=".screenEdu.ScreenEdu_ToolBar_Navigation_Activity"
             android:exported="false" /> <!-- 아이콘 교육 -->
         <activity
-            android:name=".IconEduActivity"
+            android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
         <activity
-            android:name=".IconEdu.IconDetailActivity"
+            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
