--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".edu_space.default_app.PhoneActivity"
+            android:name=".edu_space.default_app.CameraActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".edu_space.default_app.PhoneActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
@@ -31,7 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".settingedu.SettingDetailActivity"
             android:exported="false" />
@@ -40,8 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false">
-        </activity> <!-- 화면구성 교육 -->
+            android:exported="false"></activity> <!-- 화면구성 교육 -->
         <activity
             android:name=".screenEdu.ScreenEduActivity"
             android:exported="false" /> <!-- 화면 구성: 1.메인 화면 -->
@@ -68,13 +71,13 @@
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".settingedu.SettingDisplayActivity"
             android:exported="false" />
         <activity
             android:name=".settingedu.SettingEduActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
