--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,8 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.CameraActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".edu_space.default_app.PhoneActivity"
@@ -45,25 +41,39 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false" /> <!-- 화면구성 교육 -->
+            android:exported="false" />
+
+        <!-- 화면구성 교육 -->
         <activity
             android:name=".screenEdu.ScreenEduActivity"
-            android:exported="false" /> <!-- 화면 구성: 1.메인 화면 -->
+            android:exported="false" />
+
+        <!-- 화면 구성: 1.메인 화면 -->
         <activity
             android:name=".screenEdu.ScreenEduMainActivity"
-            android:exported="false" /> <!-- 화면 구성: 2.상단바 -->
+            android:exported="false" />
+
+        <!-- 화면 구성: 2.상단바 -->
         <activity
             android:name=".screenEdu.ScreenEduToolActivity"
-            android:exported="false" /> <!-- 화면 구성: 3.하단바 -->
+            android:exported="false" />
+
+        <!-- 화면 구성: 3.하단바 -->
         <activity
             android:name=".screenEdu.ScreenEduBottomActivity"
-            android:exported="false" /> <!-- 화면 구성: -->
+            android:exported="false" />
+
+        <!-- 화면 구성: -->
         <activity
             android:name=".screenEdu.ScreenEdu_select_Activity"
-            android:exported="false" /> <!-- 화면 구성: 상단바 교육 화면 -->
+            android:exported="false" />
+
+        <!-- 화면 구성: 상단바 교육 화면 -->
         <activity
             android:name=".screenEdu.ScreenEdu_ToolBar_Navigation_Activity"
-            android:exported="false" /> <!-- 아이콘 교육 -->
+            android:exported="false" />
+
+        <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
@@ -73,30 +83,28 @@
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" >
+        </activity>
 
+        <!-- 환경설정 교육 -->
+        <activity
+            android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingEduActivity"
+            android:exported="false">
 
         </activity>
-        <!-- 환경설정 교육 -->
-            android:exported="false" />
+
         <activity
-            android:name=".settingedu.SettingDisplayActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.sungkyul.synergy.settingedu.SettingEduActivity"
+            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingFontSizeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.sungkyul.synergy.settingedu.SettingFontSizeActivity"
-            android:exported="false">
-
-        </activity>
-        <activity
-            android:name=".settingedu.SettingDetailActivity"
+            android:name=".edu_space.settingedu.activity.SettingDetailActivity"
             android:exported="false" />
 
 
