[add] 시작 화면 초기 UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
-
-        <!--메인 화면-->
+        <activity
+            android:name=".main.activity.SynergyMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.activity.DigitalStartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.activity.RegisterActivity"
+            android:exported="false" /> <!-- 메인 화면 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-
-        <!-- 아이콘 교육 -->
+            android:exported="false" /> <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
@@ -30,20 +34,19 @@
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 화면구성 교육 -->
+        </activity> <!-- 화면구성 교육 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduMainActivity"
             android:exported="false" /> <!-- 화면 구성: 1.메인 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduToolActivity"
-            android:exported="false" /> <!--상단바-->
+            android:exported="false" /> <!-- 상단바 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduLeftToolActivity"
             android:excludeFromRecents="false" />
@@ -52,18 +55,17 @@
             android:excludeFromRecents="false" />
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduBottomActivity"
-            android:exported="false" /> <!--하단바-->
+            android:exported="false" /> <!-- 하단바 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduLeftBottomActivity"
-            android:exported="false" /> <!--하단바-->
+            android:exported="false" /> <!-- 하단바 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduCenterBottomActivity"
-            android:exported="false" /> <!--하단바-->
+            android:exported="false" /> <!-- 하단바 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduRightBottomActivity"
-            android:exported="false" /> <!--하단바-->
-
-        <!--기본 앱 교육-->
+            android:exported="false" /> <!-- 하단바 -->
+        <!-- 기본 앱 교육 -->
         <activity
             android:name=".edu_space.default_app.CallActivity"
             android:exported="false" />
@@ -75,34 +77,26 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.PhoneActivity"
-            android:exported="false" />
-
-        <!-- 환경설정 교육 -->
+            android:exported="false" /> <!-- 환경설정 교육 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
             android:exported="false" />
         <activity
-            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingEduActivity"
+            android:name=".edu_space.settingedu.activity.SettingEduActivity"
             android:exported="false" />
         <activity
-            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingFontSizeActivity"
+            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" />
-
-        <!-- 계정생성 교육 -->
+            android:exported="false" /> <!-- 계정생성 교육 -->
         <activity
-            android:name="com.sungkyul.synergy.edu_space.accountedu.GoogleMainActivity"
+            android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
         <activity
-            android:name="com.sungkyul.synergy.edu_space.accountedu.GoogleLoginActivity"
-            android:exported="false" />
-
-        <!-- 앱 설치-->
-
-
-        <!--카카오톡 교육-->
+            android:name=".edu_space.accountedu.GoogleLoginActivity"
+            android:exported="false" /> <!-- 앱 설치 -->
+        <!-- 카카오톡 교육 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
             android:exported="false" />
@@ -114,16 +108,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false" >
-        </activity>
-
-        <!--네이버-->
-
-        <!--코레일-->
-
-        <!--카카오택시-->
-
-        <!--배달의 민족-->
-
+            android:exported="false" />
     </application>
+
 </manifest>
