--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,14 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
@@ -34,13 +41,9 @@
             android:exported="false" />
         <activity
             android:name=".main.activity.RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="true" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 화면구성 교육 -->
+             <!-- 화면구성 교육 -->
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduMainActivity"
             android:exported="false" /> <!-- 화면 구성: 1.메인 -->
@@ -77,7 +80,8 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.PhoneActivity"
-            android:exported="false" /> <!-- 환경설정 교육 -->
+            android:exported="false" />
+        <!-- 환경설정 교육 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
             android:exported="false" />
@@ -89,13 +93,16 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /> <!-- 계정생성 교육 -->
+            android:exported="false" />
+        <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleLoginActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
+            android:exported="false" />
+        <!-- 앱 설치 -->
+
         <!-- 카카오톡 교육 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
