[feat] 네이버와 네이버 검색 화면 일부 구현, 교육 프로세스 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
+            android:name=".edu_space.default_app.NaverSearchActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".edu_space.default_app.NaverActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".edu_space.default_app.CallActivity"
             android:exported="false" />
         <activity
@@ -22,11 +30,17 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.CameraActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.default_app.PhoneActivity"
-            android:exported="false">
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
         <activity
             android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
@@ -36,47 +50,31 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaotalkLoginActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false" />
-
-        <!-- 화면구성 교육 -->
+            android:exported="false" /> <!-- 화면구성 교육 -->
         <activity
             android:name=".screenEdu.ScreenEduActivity"
-            android:exported="false" />
-
-        <!-- 화면 구성: 1.메인 화면 -->
+            android:exported="false" /> <!-- 화면 구성: 1.메인 화면 -->
         <activity
             android:name=".screenEdu.ScreenEduMainActivity"
-            android:exported="false" />
-
-        <!-- 화면 구성: 2.상단바 -->
+            android:exported="false" /> <!-- 화면 구성: 2.상단바 -->
         <activity
             android:name=".screenEdu.ScreenEduToolActivity"
-            android:exported="false" />
-
-        <!-- 화면 구성: 3.하단바 -->
+            android:exported="false" /> <!-- 화면 구성: 3.하단바 -->
         <activity
             android:name=".screenEdu.ScreenEduBottomActivity"
-            android:exported="false" />
-
-        <!-- 화면 구성: -->
+            android:exported="false" /> <!-- 화면 구성: -->
         <activity
             android:name=".screenEdu.ScreenEdu_select_Activity"
-            android:exported="false" />
-
-        <!-- 화면 구성: 상단바 교육 화면 -->
+            android:exported="false" /> <!-- 화면 구성: 상단바 교육 화면 -->
         <activity
             android:name=".screenEdu.ScreenEdu_ToolBar_Navigation_Activity"
-            android:exported="false" />
-
-        <!-- 아이콘 교육 -->
+            android:exported="false" /> <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
@@ -85,31 +83,19 @@
             android:exported="false" />
         <activity
             android:name=".EduSpaceActivity"
-            android:exported="false" >
-        </activity>
-
-        <!-- 환경설정 교육 -->
+            android:exported="false" /> <!-- 환경설정 교육 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
             android:exported="false" />
         <activity
-            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingEduActivity"
-            android:exported="false">
-
-        </activity>
-
+            android:name=".edu_space.settingedu.activity.SettingEduActivity"
+            android:exported="false" />
         <activity
-            android:name="com.sungkyul.synergy.edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
+            android:exported="false"></activity>
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
             android:exported="false" />
-
-
     </application>
+
 </manifest>
