--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,24 +15,24 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".edu_space.default_app.NaverSearchActivity"
+            android:name=".edu_space.naver.activity.NaverSearchActivity"
             android:exported="false">
         </activity>
         <activity
-            android:name=".edu_space.default_app.NaverActivity"
+            android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="false">
         </activity>
         <activity
-            android:name=".edu_space.default_app.CallActivity"
+            android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
             android:exported="false" />
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" />
         <activity
-            android:name=".edu_space.default_app.CameraActivity"
+            android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" />
         <activity
-            android:name=".edu_space.default_app.PhoneActivity"
+            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
