--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,13 @@
             android:exported="false" /> <!--디지털 나이 검사-->
         <activity
             android:name=".MainActivity"
-            android:exported="false" /> <!--첫 화면-->
+            android:exported="true" ><!--첫 화면-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!--삭제할거-->
