--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" /> <!-- 첫 화면 -->
-        </activity>
+
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할거 -->
@@ -83,8 +83,8 @@
         <!-- 계정생성 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" />
+        <!-- 앱 설치 --> <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
@@ -97,13 +97,18 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false" /> <!-- 코레일 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" />
+        <!-- 코레일 --> <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
