--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,20 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".edu_space.naver.activity.NaverSearchActivity"
-            android:exported="false">
+            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
+            android:name=".edu_space.naver.activity.NaverSearchActivity"
+            android:exported="false"/>
+        <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
             android:exported="false" />
@@ -33,14 +40,9 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
@@ -76,8 +78,7 @@
             android:exported="false" /> <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" />
-        <!-- 계정생성 교육 -->
+            android:exported="false" /> <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -92,7 +93,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
             android:exported="false" />
