--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
+
+        <!--교육공간-->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="true">
+            android:name=".main.activity.DigitalStartActivity"
+            android:exported="false" /> <!-- 디지털 나이 검사 -->
+        <activity android:name=".MainActivity"
+            android:exported="true"> <!--메인화면-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".main.activity.DigitalStartActivity"
-            android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할거 -->
@@ -74,13 +75,21 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:exported="false" /> <!--전화-->
+
         <!-- 환경설정 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingEduActivity"
             android:exported="false" /> <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /> <!-- 계정생성 교육 -->
+            android:exported="false" /><!--화면 밝기-->
+        <activity
+            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
+            android:exported="false" /><!--글씨 크기-->
+        <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -100,12 +109,11 @@
             android:exported="false" />
         <!-- 코레일 --> <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
+        <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".edu_space.kakaotaxi.payMActivity"
             android:exported="false" />
