실습공간 메인 페이지

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,23 @@
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity android:name=".MainActivity"
-            android:exported="true"> <!--메인화면-->
+            android:exported="false" /> <!--메인화면-->
+
+        <activity
+            android:name=".EduSpaceActivity"
+            android:exported="false" /> <!-- 삭제할거 -->
+
+        <!--실습공간-->
+        <activity
+            android:name=".training.activity.TrainingActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".EduSpaceActivity"
-            android:exported="false" /> <!-- 삭제할거 -->
+
         <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
