--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:name=".edu_space.default_app.activity.DefaultAppActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".main.activity.DigitalStartActivity"
@@ -83,8 +87,8 @@
             android:exported="false" /> <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" />
-        <!-- 앱 설치 --> <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" /> <!-- 앱 설치 -->
+        <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
@@ -97,8 +101,8 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false" />
-        <!-- 코레일 --> <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" /> <!-- 코레일 -->
+        <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
@@ -111,7 +115,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.payActivity"
-            android:exported="false" /> 
+            android:exported="false" />
     </application>
 
 </manifest>
